--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,4 @@ markers =
     registration: Маркировка для тестов связанных с регистрацией пользователей.
     authorization: Маркировка для тестов связанных с авторизацией пользователей.
     courses: Маркировка для тестов course тестов.
+    critical: Маркировка для критических тестов.
