--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,4 @@ markers =
     authorization: Маркировка для тестов связанных с авторизацией пользователей.
     courses: Маркировка для тестов course тестов.
     critical: Маркировка для критических тестов.
+    dashboard: Маркировка для тестов, связанных с рабочей панелью.
