--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,9 +48,9 @@ jobs:
           allure-history: allure-history
 
       - name: Deploy report to GitHub Pages
-        uses: peaceris/actions-gh-pages@v2
-        env:
-        PERSONAL_TOKEN: {{ secrets.GITHUB_TOKEN }}
+        uses: peaceiris/actions-gh-pages@v2
+        with:
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
         PUBLISH_DIR: allure-history
         if: always()
