--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
       -main
 
 
-jobs:
+job_1:
   run-tests:
     runs-on: ubuntu-latest
 
@@ -47,10 +47,15 @@ jobs:
           allure_results: allure-results
           allure-history: allure-history
 
-      - name: Deploy report to GitHub Pages
-        if: always()
-        uses: peaceiris/actions-gh-pages@v4
-        with:
+job_2:
+  name: Deploy report to GitHub Pages
+  needs: job_1
+  runs_on: ubuntu-latest
+  steps:
+    - name: Deploy report to GitHub Pages
+      if: always()
+      uses: peaceiris/actions-gh-pages@v4
+      with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
