--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,55 +9,56 @@ on:
       -main
 
 
-job_1:
-  run-tests:
-    runs-on: ubuntu-latest
+jobs:
+  job_1:
+    run-tests:
+      runs-on: ubuntu-latest
 
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+      steps:
+        - name: Check out repository
+          uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python version: '3.12'
+        - name: Set up Python
+          uses: actions/setup-python@v4
+          with:
+            python version: '3.12'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          playwright install --with-deps
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+            playwright install --with-deps
           
-      - name: Run Playwright tests with pytest and generate Allure results
-        run: |
-          pytest -m regression --alluredir=./allure-results --numprocesses 2 
+        - name: Run Playwright tests with pytest and generate Allure results
+          run: |
+            pytest -m regression --alluredir=./allure-results --numprocesses 2 
 
-      - name: Get Allure history
-        uses: actions/checkout@v4
+        - name: Get Allure history
+          uses: actions/checkout@v4
+          if: always()
+          continue-on-error: true
+          with:
+            ref: gh-pages
+            path: gh-pages
+
+        - name: Allure Report action from marketplace
+          uses: simple-elf/allure-report-action@v1.7
+          if: always()
+          with:
+            allure_results: allure-results
+            allure-history: allure-history
+
+  job_2:
+    name: Deploy report to GitHub Pages
+    needs: job_1
+    runs_on: ubuntu-latest
+    steps:
+      - name: Deploy report to GitHub Pages
         if: always()
-        continue-on-error: true
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          ref: gh-pages
-          path: gh-pages
-
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@v1.7
-        if: always()
-        with:
-          allure_results: allure-results
-          allure-history: allure-history
-
-job_2:
-  name: Deploy report to GitHub Pages
-  needs: job_1
-  runs_on: ubuntu-latest
-  steps:
-    - name: Deploy report to GitHub Pages
-      if: always()
-      uses: peaceiris/actions-gh-pages@v4
-      with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: allure-history
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            publish_branch: gh-pages
+            publish_dir: allure-history
 
 
