--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,10 @@ on:
 
 jobs:
   job_1:
-    run-tests:
-      runs-on: ubuntu-latest
+    name: Run Test
+    runs-on: ubuntu-latest
 
-      steps:
+    steps:
         - name: Check out repository
           uses: actions/checkout@v4
 
