--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,6 +31,32 @@ jobs:
         - name: Run Playwright tests with pytest and generate Allure results
           run: |
             pytest -m regression --alluredir=allure-results --numprocesses 2 
+            
+        - name: Restore Coverage history
+          uses: actions/cache/restory@v4
+          with:
+            path: coverage-history.json
+            key: coverage-history-${{ github.run_id }}
+            restore-keys: |
+              coverage-history-
+            
+        - name: Generate Coverage report
+          run: |
+            ui-coverage-tool save-report
+
+        - name: Cache Coverage  history
+          if: always()
+          uses: actions/cache/save@v4
+          with:
+            path: coverage-history.json
+            key: coverage-history-${{ github.run_id }}
+
+        - name: Upload Coverage results
+          if: always()
+          uses: actions/upload-artifact@v4
+          with:
+            name: coverage-report
+            path: coverage.html
 
         - name: Upload Allure results
           if: always()
