--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Ui tests
+name: UI tests
 
 on:
   push:
@@ -8,62 +8,66 @@ on:
     branches:
       - main
 
-
 jobs:
   run-tests:
     runs-on: ubuntu-latest
 
     steps:
-        - name: Check out repository
-          uses: actions/checkout@v4
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-        - name: Set up Python
-          uses: actions/setup-python@v4
-          with:
-            python version: '3.12'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-            playwright install --with-deps
-          
-        - name: Run Playwright tests with pytest and generate Allure results
-          run: |
-            pytest -m regression --alluredir=allure-results --numprocesses 2 
-            
-        - name: Restore Coverage history
-          uses: actions/cache/restory@v4
-          with:
-            path: coverage-history.json
-            key: coverage-history-${{ github.run_id }}
-            restore-keys: |
-              coverage-history-
-            
-        - name: Generate Coverage report
-          run: |
-            ui-coverage-tool save-report
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          playwright install --with-deps
 
-        - name: Cache Coverage  history
-          if: always()
-          uses: actions/cache/save@v4
-          with:
-            path: coverage-history.json
-            key: coverage-history-${{ github.run_id }}
+      - name: Run Playwright tests with pytest and generate Allure results
+        run: |
+          pytest -m regression --alluredir=allure-results --numprocesses 2
 
-        - name: Upload Coverage results
-          if: always()
-          uses: actions/upload-artifact@v4
-          with:
-            name: coverage-report
-            path: coverage.html
+      # Восстанавливаем историю покрытия из кеша
+      - name: Restore Coverage history
+        uses: actions/cache/restore@v4
+        with:
+          path: coverage-history.json
+          key: coverage-history-${{ github.run_id }}
+          restore-keys: |
+            coverage-history-
 
-        - name: Upload Allure results
-          if: always()
-          uses: actions/upload-artifact@v4
-          with:
-            name: allure-results
-            path: allure-results
+      # Генерируем HTML-отчет и обновляем историю
+      - name: Generate Coverage report
+        run: |
+          ui-coverage-tool save-report
+
+      # Сохраняем историю обратно в кеш
+      - name: Cache Coverage  history
+        if: always()
+        uses: actions/cache/save@v4
+        with:
+          path: coverage-history.json
+          key: coverage-history-${{ github.run_id }}
+
+      # Загружаем HTML-отчет как артефакт
+      - name: Upload Coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.html
+
+      - name: Upload Allure results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-results
+          path: allure-results
+
 
   publish-report:
     if: always()
@@ -97,5 +101,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-history
-
 
