--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -91,6 +91,7 @@ jobs:
         uses: allure-framework/allure-github-action@v2
         if: always()
         with:
+          version: '2.24.0'
           allure_results: allure-results
           allure_history: allure-history
 
